--- a/projects/templates/projects.html
+++ b/projects/templates/projects.html
@@ -1,3 +1,6 @@
+
+{% include 'header.html' with page="projects" %}
+
 {% for project in projects %}
     <div>
         <h2>{{ project.project_name }}</h2>
