--- a/homepage/templates/homepage.html
+++ b/homepage/templates/homepage.html
@@ -1,4 +1,10 @@
-<img src="{{ profile.image.url }}" alt="profile name">
-<h1>{{ profile.name }}</h1>
-<p>{{ profile.role }}</p>
-<p>{{ profile.bio }}</p>
+{% comment %} {% block title %}Home{% endblock %} {% endcomment %}
+
+{% block content %}
+    {% include 'header.html' with page="homepage" %}
+
+    <img src="{{ profile.image.url }}" alt="profile name">
+    <h1>{{ profile.name }}</h1>
+    <p>{{ profile.role }}</p>
+    <p>{{ profile.bio }}</p>
+{% endblock %}
